2003-09-13  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Rewrite help a little

2003-09-13  Kentaro Sato <kentaro@a02.itscom.net>

	* timidity/readmidi.c (recompute_insertion_effect): Bug fix.

2003-09-12  Takashi Iwai <tiwai@suse.de>

	* timidity/playmidi.h, timidity/timidity.c, interface/alsaseq_c.c:
	  Added --realtime-priority and --sequencer-ports options for
	  ALSA sequencer interface.
	* Drop root privilege after chaging RT-priority.
	* Enable background option only when ALSA seq. interface is
	  built in.

2003-09-12  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (new_chorus_voice_alternate): Revert
	  surround chorus delay back again (to 0.003)
	  (midi_drumpart_change): set/unset drumchannel info

2003-09-12  mput <root@mput.dip.jp>

	* timidity/playmidi.c : Remove C++ style ``//'' comments

2003-09-09  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (new_chorus_voice_alternate) : Revert
	  surround chorus delay back to the value (0.002) used in v2.11.3.

2003-09-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.c:
	  Adjust minor of not Pythagoras tuning but both
	  mean-tone tuning and pure intonation by syntonic comma

2003-09-03  Takashi Iwai <tiwai@suse.de>

	* interface/alsaseq_c.c:
	  Fixed the compilation on ALSA 0.5.x environemnt.

2003-09-03  URABE Shyouhei <root@mput.dip.jp>

	* configure: autoreconf

2003-09-02  Takashi Iwai <tiwai@suse.de>

	* TiMidity.ad.in, TiMidity-uj.ad.in: Move.
	* interface/tkmidity.ptcl, interface/xaw_c.c, interface/xaw_i.c:
	  Bug fix.

2003-08-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Little patch to avoid prototype mismatch

2003-08-27  mput <root@mput.dip.jp>

	* configure: autoreconfed

2003-08-27  Takashi Iwai <tiwai@suse.de>

	* interface/alsaseq_c.c, configure.in:
	  higher resolution of rendering in ALSA sequencer mode
	  with the event timestamps.  works only on the latest
	  ALSA 0.9.