@@ -154,34 +154,6 @@ static char significantDigitsLessOne[256] = {
     7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7
 };
 
-/* mod volumes are linear, midi volumes are x^1.66 (for generic hardware)
- * scale the mod volumes so they sound linear on non-linear midi devices
- * MAINVOLUME events are the new corrected volume levels
- * EXPRESSION events fine tune the volume correction
- *
- * lookup_table[mod_vol][volume, expression]
- */
-static char vol_nonlin_to_lin[128][2] = {
-      7, 125,  11, 120,  14, 121,  16, 126,  19, 121,  21, 122,  23, 122,
-     25, 122,  26, 126,  28, 125,  30, 123,  31, 126,  33, 124,  34, 126,
-     36, 124,  37, 125,  38, 126,  40, 124,  41, 125,  42, 126,  43, 127,
-     45, 125,  46, 125,  47, 126,  48, 126,  49, 127,  50, 127,  52, 125,
-     53, 125,  54, 125,  55, 125,  56, 126,  57, 126,  58, 126,  59, 126,
-     60, 126,  61, 126,  62, 126,  63, 126,  64, 126,  65, 126,  66, 126,
-     67, 125,  68, 125,  69, 125,  69, 127,  70, 127,  71, 126,  72, 126,
-     73, 126,  74, 126,  75, 126,  76, 125,  76, 127,  77, 127,  78, 126,
-     79, 126,  80, 126,  81, 126,  81, 127,  82, 126,  83, 126,  84, 126,
-     85, 126,  85, 127,  86, 126,  87, 126,  88, 126,  88, 127,  89, 127,
-     90, 126,  91, 126,  91, 127,  92, 127,  93, 126,  94, 126,  94, 127,
-     95, 127,  96, 126,  97, 126,  97, 127,  98, 126,  99, 126, 100, 126,
-    100, 127, 101, 126, 102, 126, 102, 127, 103, 126, 104, 126, 104, 127,
-    105, 127, 106, 126, 106, 127, 107, 127, 108, 126, 108, 127, 109, 127,
-    110, 126, 110, 127, 111, 127, 112, 126, 112, 127, 113, 127, 114, 126,
-    114, 127, 115, 127, 116, 126, 116, 127, 117, 126, 118, 126, 118, 127,
-    119, 126, 120, 126, 120, 127, 121, 126, 121, 127, 122, 126, 123, 126,
-    123, 127, 124, 126, 124, 127, 125, 127, 126, 126, 126, 127, 127, 126,
-    127, 127 };
-
 /******************************************************************************/
 
 void
@@ -276,8 +248,7 @@ Voice_SetVolume (UBYTE v, UWORD vol)
 
   if (ModV[v].vol != vol) {
     ModV[v].vol = vol;
-    MIDIEVENT (at, ME_MAINVOLUME, v, vol_nonlin_to_lin[vol][0], 0);
-    MIDIEVENT (at, ME_EXPRESSION, v, vol_nonlin_to_lin[vol][1], 0);
+    MIDIEVENT (at, ME_EXPRESSION, v, vol, 0);
   }
 }
 
